Cli module added